Support registerProtocolHandler with network service.

Bug: 919246
Change-Id: I99692b434fac2b3e70b07cd1b9e183660cd34aff
Reviewed-on: https://chromium-review.googlesource.com/c/1396156
Reviewed-by: Doug Turner <dougt@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620201}
Former-commit-id: 8efa11f6f6967938e6b84fe4b800cb1d898dff6d