chrome/browser/predictors/loading_data_collector.cc
@@ -110,7 +110,6 @@ void PageRequestSummary::UpdateOrAddToOrigins(
     const GURL& url,
     const content::mojom::CommonNetworkInfoPtr& network_info) {
   GURL origin = url.GetOrigin();
-  DCHECK(origin.is_valid());
   if (!origin.is_valid())
     return;
 
